[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-quantkit"
description = "cli tool for downloading and quantizing LLMs"
readme = "README.md"
license = { text = "MIT License" }
version = "0.29"
authors = [{ name = "xhedit", email = "jevd@protonmail.com" }]
dependencies = [
    "click",
    "torch>=2.0.0",
    "einops",
    "tqdm",
    "transformers",
    "huggingface_hub",
    "safetensors",
    "exllamav2",
    "llama-cpp-conv",
    "sentencepiece",
    "hqq",
    "llmcompressor",
]

[project.optional-dependencies]
cuda = [
    "auto-gptq",
    "autoawq",
]

[project.urls]
repository = "https://github.com/xhedit/quantkit"

[project.scripts]
quantkit = "quantkit.cli:main"

[tool.setuptools]
packages = [
    "quantkit",
]
